ranges ok in copyright notices, merge peb ChangeLog entries
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@65 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/common-code.tex
+++ b/lit/common-code.tex
@@ -3,8 +3,8 @@
 % in runtime.  These are only used in a few files, compared to those in
 % common.tex.  Do not know if any harm would come from including them always.
 % 
-% Copyright 2009, 2010 TeX Users Group
-% Copyright 1996--2009 Eitan M. Gurari
+% Copyright 2009-2010 TeX Users Group
+% Copyright 1996-2009 Eitan M. Gurari
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either
