--- a/lit/tex4ht-docbook-xtpipes.tex
+++ b/lit/tex4ht-docbook-xtpipes.tex
@@ -1,8 +1,8 @@
 % $Id$
 % htlatex tex4ht-docbook-xtpipes "xhtml,next,3" "" "-d./"
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2000--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -32,7 +32,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
 <!-- docbook.4xt (`version), generated from `jobname.tex
-     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) 2009-2010 TeX Users Group
      Copyright (C) `CopyYear.2008. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <xtpipes preamble="yes" signature="docbook.4xt (`version)">
@@ -55,7 +55,7 @@
 \<DbUtilities.java\><<<
 package tex4ht;
 /* DbUtilities.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2008. Eitan M. Gurari
 `<TeX4ht copyright`> */
 
