--- a/lit/tex4ht-docbook.tex
+++ b/lit/tex4ht-docbook.tex
@@ -2,8 +2,8 @@
 % compile 3 times:     latex tex4ht-docbook   
 %                or  xhlatex tex4ht-docbook "html,3,sections+"
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2000--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -28,7 +28,7 @@
 
 \<docbook\><<<
 % docbook.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2000. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
@@ -37,7 +37,7 @@
 \<docbook-math\><<<
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 % docbook-math.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2000. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
@@ -46,7 +46,7 @@
 \<docbook-mml\><<<
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 % docbook-mml.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2000. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
