--- a/lit/tex4ht-fonts-noncjk.tex
+++ b/lit/tex4ht-fonts-noncjk.tex
@@ -2,8 +2,8 @@
 %          tex tex4ht-fonts-noncjk
 % or    ht tex tex4ht-fonts-noncjk   
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 1997--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 1997-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -581,7 +581,7 @@ A.12\EndLink{} at the CSS specifications.
 
 \<SearchFonts.java\><<<
 /* SearchFonts.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 import java.io.*;
