--- a/lit/tex4ht-html-speech-xtpipes.tex
+++ b/lit/tex4ht-html-speech-xtpipes.tex
@@ -1,8 +1,8 @@
 % $Id$
 % htlatex tex4ht-html-speech-xtpipes "html,next,3" "" "-d./"
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2006--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2006-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -34,7 +34,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
 <!-- htspk.4xt (`version), generated from `jobname.tex
-     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) 2009-2010 TeX Users Group
      Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <xtpipes>
@@ -154,7 +154,7 @@
 \<HtSpk.java\><<<
 package tex4ht;
 /* HtSpk.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2006. Eitan M. Gurari
 `<TeX4ht copyright`> */
 import org.w3c.dom.*;
