--- a/lit/tex4ht-jsmath.tex
+++ b/lit/tex4ht-jsmath.tex
@@ -2,8 +2,8 @@
 % compile 3 times: latex tex4ht-jsmath
 %    or          xhlatex tex4ht-jsmath "html,3,sections+"
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2005--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2005-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 %
@@ -44,14 +44,14 @@
 
 \<jsmath\><<<
 % jsmath.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2005. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
 
 \<html-jsmath\><<<
 % html-jsmath.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2006. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
