--- a/lit/tex4ht-jsml-xtpipes.tex
+++ b/lit/tex4ht-jsml-xtpipes.tex
@@ -1,8 +1,8 @@
 % $Id$
 % htlatex tex4ht-jsml-xtpipes "xhtml,next,3" "" "-d./"
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2002--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2002-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -32,7 +32,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
 <!-- jsml.4xt (`version), generated from `jobname.tex
-     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) 2009-2010 TeX Users Group
      Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <xtpipes signature="jsml.4xt (`version)">
@@ -153,7 +153,7 @@
 \<HtJsml.java\><<<
 package tex4ht;
 /* HtJsml.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 import org.w3c.dom.*;
@@ -189,7 +189,7 @@ public class HtJsml {
 \<GroupMn.java\><<< 
 package tex4ht;
 /* GroupMn.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 import org.xml.sax.helpers.*; 
@@ -800,7 +800,7 @@ on nodes with large numbers of children.
 \<JsmlMathBreak.java\><<< 
 package tex4ht;
 /* JsmlMathBreak.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 
@@ -998,7 +998,7 @@ The following adds PARA on `p' paragraphs, ul.
 \<JsmlFilter.java\><<< 
 package tex4ht;
 /* JsmlFilter.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 import org.xml.sax.helpers.*; 
