--- a/lit/tex4ht-jsml.tex
+++ b/lit/tex4ht-jsml.tex
@@ -4,8 +4,8 @@
 % Copy html.4ht into the work directory before each of the 
 %            first two compilations
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2000--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -65,7 +65,7 @@
 
 \<jsml\><<<
 % jsml.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2006. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
@@ -73,7 +73,7 @@
 
 \<jsml-math\><<<
 % jsml-math.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2006. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
