--- a/lit/tex4ht-mathplayer.tex
+++ b/lit/tex4ht-mathplayer.tex
@@ -2,8 +2,8 @@
 % compile 3 times: latex tex4ht-mathplayer
 %            or   xhlatex tex4ht-mathplayer "html,3,sections+"
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 1997--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 1997-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -26,7 +26,7 @@
 
 \<mathplayer\><<<
 % mathplayer.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2002. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
