--- a/lit/tex4ht-ooffice.tex
+++ b/lit/tex4ht-ooffice.tex
@@ -1,8 +1,8 @@
 % $Id$
 % compile 3 times: latex tex4ht-ooffice
 %      htlatex tex4ht-ooffice "xhtml,4,sections+"
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2001--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2001-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -108,7 +108,7 @@ tail>>>
 
 
 \<copy right notice\><<<
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2001. Maarten Wisse, James Naughton, Eitan M. Gurari
 % Maarten.Wisse@urz.uni-heidelberg.de, http://home.wanadoo.nl/pmwisse
 % james.naughton@st-edmund-hall.oxford.ac.uk
