--- a/lit/tex4ht-options.tex
+++ b/lit/tex4ht-options.tex
@@ -1,8 +1,8 @@
 % $Id$
 % latex tex4ht-options   or    xhlatex tex4ht-options
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2000--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -50,7 +50,7 @@ tail>>>
   \catcode`\%}\catcode`\%|=14\fi
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 % tex4ht.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.1997. Eitan M. Gurari
 |<TeX4ht copywrite|>
 |<save catcodes|>
