--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,11 +1,20 @@
-2010-11-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
+2010-11-17  Karl Berry  <karl@gnu.org>
 
-	* tex4ht-c.tex,
-	* tex4ht-t4ht.tex: some warning fixes.
+	* all files: switch to ranges in copyright notices.
 
 2010-11-17  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-c.tex: compiler options are a comment, despite #define's.
+
+2010-11-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* t4ht.c (main): Initialize addr and media in order to avoid
+	compiler warnings.  Use '#if 0' to skip unreachable code.
+
+2010-11-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* t4ht.c (filterGifScript): Avoid 'filtered_script might be used
+	uninitialized'.  Use NULL_SCRIPT.
 
 2010-03-17  Karl Berry  <karl@gnu.org>
 
@@ -203,5 +212,20 @@
 	to generated files.
 	* tex4ht-cpright.tex: minimize lines.
 	* Makefile: start at new file.
+
+2010-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* t4ht.c (get_env_dir) [WIN32]: Declare as static.
+
+2010-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* tex4ht.c [__MINGW32__]: #define HAVE_BOOLEAN in order to avoid
+	conflicting declaration for boolean from kpathsea/types.h.
+	Declare various param strings as const.
+
+2009-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* t4ht.c, tex4ht.c: Declare numerous param and local strings as
+	const.
 
 This file is public domain.  Started 2010, Karl Berry.
