--- a/lit/common-info.tex
+++ b/lit/common-info.tex
@@ -2,8 +2,8 @@
 % Common TeX definitions used only in the *-info.tex literate sources.
 % Not installed.
 % 
-% Copyright 2009, 2010 TeX Users Group
-% Copyright 1996--2009 Eitan M. Gurari
+% Copyright 2009-2010 TeX Users Group
+% Copyright 1996-2009 Eitan M. Gurari
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either
