--- a/lit/common.tex
+++ b/lit/common.tex
@@ -1,8 +1,8 @@
 % $Id$
 % A few common TeX definitions for literate sources.  Not installed in runtime.
 % 
-% Copyright 2009, 2010 TeX Users Group
-% Copyright 1996--2009 Eitan M. Gurari
+% Copyright 2009-2010 TeX Users Group
+% Copyright 1996-2009 Eitan M. Gurari
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either
@@ -30,4 +30,4 @@
    :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
 
 % #1 is the first year for Eitan.  The last year is always 2009.  RIP.
-\def\CopyYear.#1.{#1--2009}
+\def\CopyYear.#1.{#1-2009}
