--- a/lit/tex4ht-bibtex2.tex
+++ b/lit/tex4ht-bibtex2.tex
@@ -1,8 +1,8 @@
 % $Id$
 % compile: latex  tex4ht-bibtex2
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2000--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -17,7 +17,7 @@
 
 \<bibtex2.4ht\><<<
 % bibtex2.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2001. Eitan M. Gurari
 |<TeX4ht copywrite|>
 \catcode`\/=0
