--- a/lit/tex4ht-c.tex
+++ b/lit/tex4ht-c.tex
@@ -2,8 +2,8 @@
 %         tex tex4ht-c
 % or   ht tex tex4ht-c
 
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 1996--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -231,7 +231,7 @@ of Windows 3.1,  WIN32 window in Windows 95/NT,  Unix shell, etc).
 
 \<tex4ht.c\><<< 
 /* tex4ht.c (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.1996. Eitan M. Gurari
 `<TeX4ht copyright`> */
 `<tex4ht.h`>
