--- a/lit/tex4ht-cond4ht.tex
+++ b/lit/tex4ht-cond4ht.tex
@@ -2,8 +2,8 @@
 % (1)  tex tex4ht-cond4ht    or   xhtex tex4ht-cond4ht
 % (2)  tex cond4ht.4ht
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 1997--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 1997-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -29,7 +29,7 @@
                              % \AddFile{5}{amsmath} \AddFile{2}{report} ...
 
 % cond4ht.4ht (?version), generated from ?jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) ?CopyYear.2001. Eitan M. Gurari
 ?<TeX4ht copywrite?>
 
@@ -454,8 +454,8 @@ tex4ht-4ht, e.g., for adding cases to {\tt\string\exit:ifnot}.
 %  the copyright notice.
 %
 % |mkfilename (|version), generated from |jobname.4ht
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 1999--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 1999-2009 Eitan M. Gurari
 |<TeX4ht copywrite|>
 
 |<list of info files|>
