--- a/lit/tex4ht-fonts-4hf.tex
+++ b/lit/tex4ht-fonts-4hf.tex
@@ -2,7 +2,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % tex4ht-fonts-4ht.tex                  2009-07-25-19:06 %
-% Copyright (C) 1997--2009               Eitan M. Gurari %
+% Copyright (C) 1997-2009               Eitan M. Gurari %
 %                                                        %
 % This work may be distributed and/or modified under the %
 % conditions of the LaTeX Project Public License, either %
