--- a/lit/tex4ht-htcmd.tex
+++ b/lit/tex4ht-htcmd.tex
@@ -2,8 +2,8 @@
 %       tex tex4ht-htcmd
 % or ht tex tex4ht-htcmd
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 1996--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -59,7 +59,7 @@
 
 \<htcmd.c\><<<
 /* htcmd.c (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.1996. Eitan M. Gurari
    `<TeX4ht copyright`> */
 `<htcmd.h`>
