--- a/lit/tex4ht-html0.tex
+++ b/lit/tex4ht-html0.tex
@@ -2,8 +2,8 @@
 %        latex tex4ht-html0
 % or   xhlatex tex4ht-html0 "html,3,sections+"
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 1996--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -2265,7 +2265,7 @@ else {
 
 \<html0\><<<
 % html0.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.1996. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
