--- a/lit/tex4ht-html32.tex
+++ b/lit/tex4ht-html32.tex
@@ -2,8 +2,8 @@
 %      latex tex4ht-html32
 % or xhlatex tex4ht-html32 "html,3,sections+"
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 1996--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -4467,7 +4467,7 @@ The \verb'size="1"' makes the select a popout memnu
 
 \<exerqz\><<<
 % exerqz.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.1999. Eitan M. Gurari & Donald P. Story
 |<exerqz's vars|>
 |<predefined exerquiz javascript|>
@@ -5111,7 +5111,7 @@ users redefine the latter macro.
 
 \<html32\><<<
 % html32.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.1997. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
@@ -6741,7 +6741,7 @@ need to change early the catcodes of `\verb'_' and `\verb'^'.
 \<html32-math\><<<
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 % html32-math.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.1999. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
