--- a/lit/tex4ht-info-mml.tex
+++ b/lit/tex4ht-info-mml.tex
@@ -3,8 +3,8 @@
 %             or htlatex tex4ht-info-mml "html,sections+"
 %            or ht latex tex4ht-info-mml
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2000--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -27,7 +27,7 @@
 
 \<infomml\><<<
 % infomml.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2000. Eitan M. Gurari
 |<TeX4ht copywrite|>
 {          \catcode`\@=0 \catcode`\\=11 @relax
