--- a/lit/tex4ht-oo-xtpipes.tex
+++ b/lit/tex4ht-oo-xtpipes.tex
@@ -1,7 +1,7 @@
 % $Id$
 % htlatex tex4ht-oo-xtpipes "xhtml,next,3" "" "-d./"
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2001--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2001-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -36,7 +36,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
 <!-- oo-math.4xt (`version), generated from `jobname.tex
-     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) 2009-2010 TeX Users Group
      Copyright (C) `CopyYear.2006. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <xtpipes preamble="yes" signature="oo-math.4xt (`version)">
@@ -103,7 +103,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
 <!-- oo-text.4xt (`version), generated from `jobname.tex
-     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) 2009-2010 TeX Users Group
      Copyright (C) `CopyYear.2006. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <xtpipes preamble="yes" signature="oo-text.4xt (`version)">
@@ -288,7 +288,7 @@ above
 \<OoUtilities.java\><<<
 package tex4ht;
 /* OoUtilities.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2006. Eitan M. Gurari
 `<TeX4ht copyright`> */
 import org.w3c.dom.*;
@@ -1548,7 +1548,7 @@ mtext.
 \<OomFilter.java\><<<
 package tex4ht;
 /* OomFilter.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 
@@ -1613,7 +1613,7 @@ public class OomFilter extends XMLFilterImpl {
 \<OoFilter.java\><<<
 package tex4ht;
 /* OoFilter.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 `<OoFilter imports`>
