--- a/lit/tex4ht-svg.tex
+++ b/lit/tex4ht-svg.tex
@@ -2,8 +2,8 @@
 % compile 3 times: latex tex4ht-svg   
 %           or   xhlatex tex4ht-svg "html,3,sections+"
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 2000--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -26,7 +26,7 @@
 
 \<svg\><<<
 % svg.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2001. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
@@ -58,7 +58,7 @@
 
 \<configure html4-svg tex4ht\><<<    
 % svg.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) |CopyYear.2001. Eitan M. Gurari
 |<TeX4ht copywrite|>
 \Configure{@DOCTYPE}
