--- a/lit/tex4ht-t4ht.tex
+++ b/lit/tex4ht-t4ht.tex
@@ -1,8 +1,8 @@
 % $Id$
 % tex tex4ht-t4ht   or   ht tex tex4ht-t4ht
 %
-% Copyright 2009, 2010 TeX Users Group
-% Copyright (C) 1998--2009 Eitan M. Gurari
+% Copyright 2009-2010 TeX Users Group
+% Copyright (C) 1998-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -144,7 +144,7 @@ while( eoln_ch != EOF ) {
 
 \<t4ht.c\><<<
 /* t4ht.c (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.1998. Eitan M. Gurari
 `<TeX4ht copyright`> 
 */
