--- a/lit/tex4ht-xhtml-xtpipes.tex
+++ b/lit/tex4ht-xhtml-xtpipes.tex
@@ -1,8 +1,8 @@
 % $Id$
 % htlatex tex4ht-xhtml-xtpipes "xhtml,next,3" "" "-d./"
 %
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 1996--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -31,7 +31,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
 <!-- xhtml.4xt (`version), generated from `jobname.tex
-     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) 2009-2010 TeX Users Group
      Copyright (C) `CopyYear.2008. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <xtpipes preamble="yes" signature="xhtml.4xt (`version)">
@@ -98,7 +98,7 @@
 \<XhtmlEmails.java\><<< 
 package tex4ht;
 /* XhtmlEmails.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2008. Eitan M. Gurari
 `<TeX4ht copyright`> */
 
