--- a/lit/xtpipes.tex
+++ b/lit/xtpipes.tex
@@ -8,8 +8,8 @@
 % generalize -i attribute to accept multiple directories, like for -classpath
 % gcj support these ``generics''  with a ``-5'' or ``-1.5'' switch
 
-% Copyright (C) 2009, 2010 TeX Users Group
-% Copyright (C) 1996--2009 Eitan M. Gurari
+% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -257,7 +257,7 @@
 \<Xtpipes.java\><<<
 package xtpipes;
 /* Xtpipes.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 `<xtpipes imports`>
@@ -287,7 +287,7 @@ directory because MS Windows get confused between the two.
 
 \<xtpipes.java\><<<
 /* xtpipes.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 import xtpipes.*;
@@ -885,7 +885,7 @@ if( outPrintWriter == null ){
 \<XtpipesPrintWriter.java\><<<
 package xtpipes;
 /* XtpipesPrintWriter.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 import java.io.*;
@@ -1217,7 +1217,7 @@ if( Xtpipes.trace ){
 
 \<xtpipes.dtd\><<<
 <!-- xtpipes.dtd (`version), generated from `jobname.tex
-     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) 2009-2010 TeX Users Group
      Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <!ELEMENT xtpipes (#PCDATA `<xtpipes entries`>)* >
@@ -1236,7 +1236,7 @@ if( Xtpipes.trace ){
 
 \<xtpipes-map.dtd\><<<
 <!-- xtpipes-map.dtd (`version), generated from `jobname.tex
-     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) 2009-2010 TeX Users Group
      Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <!ELEMENT xtpipes-map (when | processing-instruction
@@ -2603,7 +2603,7 @@ public InputSource resolveEntity(String publicID, String systemID)
 \<FileInfo.java\><<<
 package xtpipes;
 /* FileInfo.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 `<FileInfo imports`>
@@ -2817,7 +2817,7 @@ which the file is scanned directly without trying to build an XML object.
 \<InputObject.java\><<<
 package xtpipes;
 /* InputObject.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 `<InputObject imports`>
@@ -3607,7 +3607,7 @@ The same holds for ascii characters listed within the filter.
 
 \<XtpipesUni.java\><<<
 /* XtpipesUni.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 package xtpipes;
@@ -3967,7 +3967,7 @@ import java.util.ArrayList;
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes PUBLIC "-//GURARI//DTD xtpipes//EN" "xtpipes.dtd"  >
 <!-- xtpipes-default.4xt (`version), generated from `jobname.tex
-     Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) 2009-2010 TeX Users Group
      Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <xtpipes />
@@ -4009,7 +4009,7 @@ import java.util.ArrayList;
 
 \<ScriptsManager.java\><<<
 /* ScriptsManager.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 package xtpipes.util;
@@ -4339,7 +4339,7 @@ The lexical handler sends its strings to the content hadler.
 
 \<ScriptsManagerLH.java\><<<
 /* ScriptsManagerLH.java (`version), generated from `jobname.tex
-   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) 2009-2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 package xtpipes.util;
