--- a/lit/tex4ht-htcmd.tex
+++ b/lit/tex4ht-htcmd.tex
@@ -2,6 +2,8 @@
 %       tex tex4ht-htcmd
 % or ht tex tex4ht-htcmd
 %
+% htcmd is not used for anything, but this .tex file is preserved for history.
+%
 % Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
