resplit argv for Windows; from Akira
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@67 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,11 @@
+2010-12-14  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-c.tex,
+	* tex4ht-t4ht.tex (resplit argv for windows): new section, from Akira
+	Kakuto.
+	
+	* tex4ht-htcmd.tex: document that this not used.
+
 2010-11-17  Karl Berry  <karl@gnu.org>
 
 	* all files: switch to ranges in copyright notices.
