--- a/lit/tex4ht-c.tex
+++ b/lit/tex4ht-c.tex
@@ -445,7 +445,7 @@ also include), hence this non-standard header is redundant.
 >>>
 
 
-Here are the promise patch. However I have not yet tested it very
+Here are the promised patch. However I have not yet tested it very
 much. It is unlikely that I test it with non-kpathsea setting. At
 least the patch compiles in both kpathsea and non-kpathsea setting.
  The following patch is very similar
@@ -1059,7 +1059,61 @@ void * realloc( void *, size_t)
 \EndVerbatim
 
 
+\<resplit argv for windows\><<<
+#ifdef WIN32
+  /* The idea here is to split options apart at spaces: a single argument
+     "-foo -bar" becomes the two options "-foo" and "-bar".  We need to
+     do this for Windows because mk4ht passes this sort of combined
+     option in one string to scripts like htlatex.{unix,bat}.  In the
+     Unix case, the shell resplits words when calling t4ht and tex4ht,
+     so the program see two options.  But this does not happen with the
+     .bat; %4, for instance, remains "-foo -bar".  So we fix it here.  */
+  if (argc > 2) {
+    int  i, nargc;
+    char **nargv, **pnargv, **pargv;
 
+    nargv = (char **) xmalloc (2 * argc * sizeof (char *));
+    pnargv = nargv;
+    pargv = argv;
+    *pnargv++ = xstrdup (*pargv++);
+    *pnargv++ = xstrdup (*pargv++);
+    nargc = 2;
+
+    for (i=2; i < argc; i++) {
+      char *p, *q, *r;
+      p = q = *pargv++;
+      while (*p == ' ' || *p == '\t') {
+        p++;
+        q++;
+      }
+      while (*p != ' ' && *p != '\t' && *p) {
+        p++;
+        if (*p == '\0') {
+          *pnargv++ = xstrdup(q);
+          nargc++;
+        } else if (*p == ' ' || *p == '\t') {
+          r = p;
+          while (*p == ' ' || *p == '\t')
+            p++;
+          if (*p == '-' || *p == '\0') {
+            *r = '\0';
+            *pnargv++ = xstrdup(q);
+            nargc++;
+            q = p;
+          }
+        }
+      }
+    }
+
+    for (i=0; i < argc; i++)
+      free (argv[i]);
+    free (argv);
+    nargv[nargc] = NULL;
+    argv = nargv;
+    argc = nargc;
+  }
+#endif
+>>>
 
 
 \SubSection{Signals}
@@ -1267,6 +1321,7 @@ int `<CDECL`> main(argc, argv)
        int  argc`;  
        U_CHAR **argv
 ;{  `<main's vars`> 
+   `<resplit argv for windows`>
    `<set signals`>
    `<program signature`>
    `<init traces`>
@@ -5906,7 +5961,6 @@ script(font_gif, job_name ,page_n, str);
                                            bad_in_file(str);
 }
 >>>
-
 
 \<vars\><<<
 static FILE*  log_file;
