--- a/lit/tex4ht-htcmd.tex
+++ b/lit/tex4ht-htcmd.tex
@@ -2,7 +2,12 @@
 %       tex tex4ht-htcmd
 % or ht tex tex4ht-htcmd
 %
-% htcmd is not used for anything, but this .tex file is preserved for history.
+% htcmd is apparently not used for anything, but this .tex file is
+% preserved for history.
+% 
+% htcmd OPTFLAG CMDLINE  passed CMDLINE to system(), translating each
+% forward slash into a single or double backslash for OPTFLAG set to
+% -slash or -dslash respectively.
 %
 % Copyright (C) 2009-2010 TeX Users Group
 % Copyright (C) 1996-2009 Eitan M. Gurari
