--- a/lit/tex4ht-t4ht.tex
+++ b/lit/tex4ht-t4ht.tex
@@ -158,6 +158,7 @@ int `<CDECL`> main(argc, argv)
        int  argc`;  
        Q_CHAR **argv
 ;{ `<main's vars`> 
+   `<resplit argv for windows`>
    `<set signals`>
    `<program signature`>
    `<main's init`> 
@@ -1447,7 +1448,6 @@ while( *p != '\0' ){
 }
 *q = '\0';
 >>>
-
 
 The argument `\Verb=%%~=' is replaced with the value of
 \Verb=${SELFAUTOPARENT}= under KPATHSEA.  If such a value 
@@ -3915,6 +3915,54 @@ static void warn_i_str(n,str)
 static const C_CHAR *warn_err_mssg[]={ `<warn and err messages`> "" };
 >>>
 
+\<resplit argv for windows\><<<
+#ifdef WIN32
+  /* See comments in tex4ht */
+  if (argc > 2) {
+    int  i, nargc;
+    char **nargv, **pnargv, **pargv;
+
+    nargv = (char **) xmalloc (2 * argc * sizeof (char *));
+    pnargv = nargv;
+    pargv = argv;
+    *pnargv++ = xstrdup (*pargv++);
+    *pnargv++ = xstrdup (*pargv++);
+    nargc = 2;
+
+    for (i=2; i < argc; i++) {
+      char *p, *q, *r;
+      p = q = *pargv++;
+      while (*p == ' ' || *p == '\t') {
+        p++;
+        q++;
+      }
+      while (*p != ' ' && *p != '\t' && *p) {
+        p++;
+        if (*p == '\0') {
+          *pnargv++ = xstrdup(q);
+          nargc++;
+        } else if (*p == ' ' || *p == '\t') {
+          r = p;
+          while (*p == ' ' || *p == '\t')
+            p++;
+          if (*p == '-' || *p == '\0') {
+            *r = '\0';
+            *pnargv++ = xstrdup(q);
+            nargc++;
+            q = p;
+          }
+        }
+      }
+    }
+ 
+    for (i=0; i < argc; i++)
+      free (argv[i]);
+    free (argv);
+    nargv[nargc] = NULL;
+    argv = nargv;
+    argc = nargc;
+  }
+#endif
 
 
 
