missed <<<, from peb
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@68 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,7 @@
+2010-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* tex4ht-t4ht.tex: missed <<<.
+
 2010-12-14  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-c.tex,
