try and fail to make the info option work with mzlatex
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@69 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/common-info.tex
+++ b/lit/common-info.tex
@@ -26,7 +26,40 @@
 \else
     \let\saveCd=\<
     \def\<{\edef\FIRST{\the\inputlineno}\let\<\saveCd \saveCd}
-    \def\CleanComment#1tex4ht-info#2#3#4.#5>#6//{[#4%     <--jobname
+    %
+    % Eitan's commented-out definition started like this (and doesn't work):
+    %\def\CleanComment#1tex4ht-info#2#3#4.#5>#6//{[\eatIV#4%     <--jobname
+    %
+    % Eitan's active definition started like this:
+    %\def\CleanComment#1tex4ht-info#2#3#4.#5>#6//{[#4%     <--jobname
+    %
+    % However, that didn't work either.  #4 is not the jobname. 
+    % The arguments when running htlatex tex4ht-info-mml.tex are these:
+    % %#1<-
+    %\CleanComment #1tex4ht-info#2#3#4.#5>#6//->
+    %[\if ,\ifnum \FIRST =#6 .\else ,0\fi
+    %#1<-
+    %#2<--
+    %#3<-m
+    %#4<-ml
+    %#5<-html#QPrTx1"\<infomml\
+    %#6<-92\ifx \CodeId \:gobbleii \else ...\fi 
+    %
+    % As a result, when running  mzlatex hello.tex xhtml,info  there was
+    % an error on the first line of infomml.4ht, which looked like this:
+    % \ifx\infoIVht\UnDeF\def\infoIVht#1//{}\fi\infoIVht[ml0]28...//
+    % That "ml" is not a number, so \ifnum fails.  This only happens
+    % mzlatex and the info option, not htlatex.  We don't understand.
+    %
+    % This version avoids the spurious "ml" but mzlatex hello.tex still
+    % fails, trying to process the \ConfigureHinput blocks as text.
+    % Changing the bracketed number in infomml.4ht to small values seems
+    % to make it pass, but can't see how to generate it.  The number
+    % after the brackets (#6) changes also.
+    % 
+    % Since all this is only about the info option with mzlatex,
+    % just leaving it failing for now.  Other things to do.
+    \def\CleanComment#1tex4ht-info#2#3#4.#5>#6//{[1\empty %
                   \if,\ifnum \FIRST=#6 .\else ,0\fi\fi]#6//}
     \def\eatIV#1#2#3#4{}
 \fi
