--- a/lit/tex4ht-info-mml.tex
+++ b/lit/tex4ht-info-mml.tex
@@ -71,7 +71,9 @@
 \chapter{The Code}
 
 \<configure infomml tex4ht\><<<
-\Contribution{math}.........................1
+math
+----
+\Configure{math}.........................1
 
    Contribution for the <math>  tag
 >>>
