--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,12 @@
+2010-12-23  Karl Berry  <karl@gnu.org>
+
+	* common-info.tex (\CleanComment): lengthy comment about ultimate
+	failure trying to make the info option work with mzlatex.
+
+	* tex4ht-info-mml.tex (configure infomml tex4ht): use \Configure,
+	not the undefined \Contribution, add plain text heading
+	like the others.
+
 2010-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* tex4ht-t4ht.tex: missed <<<.
