avoid a couple instances of win32
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@70 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,5 +1,9 @@
 2010-12-23  Karl Berry  <karl@gnu.org>
 
+	* tex4ht-c.tex,
+	* tex4ht-t4ht.tex,
+	* tex4ht-htcmd.tex: rewrite some doc uses of "win32".
+
 	* common-info.tex (\CleanComment): lengthy comment about ultimate
 	failure trying to make the info option work with mzlatex.
 
