attempted doc improvements
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@71 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2010-12-24  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-c.tex,
+	* tex4ht-t4ht.tex: attempt to document which files I think these
+	programs read and write.  Fix a couple typos.
+
 2010-12-23  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-c.tex,
