--- a/lit/tex4ht-t4ht.tex
+++ b/lit/tex4ht-t4ht.tex
@@ -81,12 +81,12 @@ and \Link[\FTP AlProTex.sty]{}{}AlPro\TeX\EndLink.
 
 The post-processor \`'tex4ht.c' prepares a \`'.lg' file in which it
 lists the pictures that need to be generated, and the entries
-encountered in \''\Needs{...}'.  The \`'.log' file contains the
-entries encountered in the \''\Needs-{...}'.  The t4ht.perl script
-treats as commands the entries that are enclosed between double-quote
-(\''"') characters, and the other entries as comments. It first works
-on the \`'.lg' file and then on the \`'.log' file.
-
+encountered in \''\Needs{...}'.  The \`'.log' file contains the entries
+encountered in the \''\Needs-{...}'.  The t4ht program (used to be a
+Perl script?) treats as commands the entries that are enclosed between
+double-quote (\''"') characters, and the other entries as comments. It
+first works on the \`'.lg' file and then on the \`'.log' file.
+The main output is a new \`'.css'.
 
 
 \<main's body\><<<
