-hA to enable all tracing
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@72 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,7 @@
+2010-12-25  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-c.tex (<trace context>): allow -hA to enable all tracing.
+
 2010-12-24  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-c.tex,
