--- a/doc/articles/tex4ht-process.tex
+++ b/doc/articles/tex4ht-process.tex
@@ -1,12 +1,6 @@
-%$Id: tex4ht-process.tex,v 1.2 2010/09/07 09:22:26 cvr Exp cvr $
+% $Id$
 
-\documentclass[a4paper]{article}
-\usepackage{xspace,graphicx,blog}
-
-\begin{document}
-
-
-\section{The Translation Process}
+\chapter{The Translation Process}
 The system can be activated with a sequence of
 commands of the following form, typically embedded within a script.
 
@@ -67,6 +61,4 @@ proper links.  The approach is illustrated in the following picture.
   made in the \verb'x.lg' script.
 
 \end{itemize}
-
-\end{document}
 
